# twitter

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
backend/: .dockerignore  .flake8  Dockerfile  README.md  docker-compose.yml  env.dev  pyproject.toml  render.yaml  requirements.txt  setup.sh
backend/tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/tweets/migrations/: 0001_initial.py  0002_alter_tweet_author.py  0003_tweetcomment_tweetlike.py  0004_tweet_image_tweet_location_tweet_parent_tweet_and_more.py
backend/twitter/: middleware.py  renderers.py  settings.py  urls.py
backend/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_userfollowing.py
frontend/: .eslintignore  .eslintrc.js  .prettierignore  README.md  jest.config.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.test.js  App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/tweet/: CommentsModal.tsx  Tweet.tsx  TweetComposer.tsx  TweetList.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Layout.tsx  Logo.tsx  SuggestedUsers.tsx
frontend/src/components/user/: SuggestedUsers.tsx  UserCard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Feed.tsx  Profile.tsx  SignIn.tsx  SignUp.tsx  TestPage.tsx  UserProfilePage.tsx
frontend/src/services/: api.tsx
frontend/src/utils/: avatar.ts
tweets/: models.py  serializers.py  tests.py  views.py
tweets/migrations/: 0002_alter_tweet_author.py
twitter/: settings.py
users/: models.py  tests.py  views.py
