[project]
name = "twitter"
version = "0.1.0"
description = "Twitter App"
authors = [
    {name = "caiodiasol",email = "caiodiasol@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=5.2.7,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "coverage (>=7.4.0,<8.0.0)",
    "pytest-django (>=4.7.0,<5.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
        "dj-database-url (>=2.1.0,<3.0.0)",
        "cloudinary (>=1.41.0,<2.0.0)",
        "django-cloudinary-storage (>=0.3.0,<1.0.0)"
]

[tool.poetry.group.dev.dependencies]
bandit = ">=1.7.5,<2.0.0"
safety = ">=2.3.5,<3.0.0"
black = ">=25.9.0,<26.0.0"
flake8 = ">=7.3.0,<8.0.0"
isort = ">=7.0.0,<8.0.0"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"